force-app/main/default/objects/Account/fields/ATMs_Onsite__c.field-meta.xml
<CustomField>
    <fullName>ATMs_Onsite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ATMs Onsite</label>
    <type>Checkbox</type>
</CustomField>