force-app/main/default/objects/Account/fields/Money_Services_Business__c.field-meta.xml
<CustomField>
    <fullName>Money_Services_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Money Services Business</label>
    <type>Checkbox</type>
</CustomField>