force-app/main/default/objects/Account/fields/Total_Relationship_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Total_Relationship_Exposure__c</fullName>
    <formula>LLC_BI__Proposed_Direct_Exposure__c+LLC_BI__Proposed_Indirect_Exposure__c+LLC_BI__Committed_Direct_Exposure__c+LLC_BI__Committed_Indirect_Exposure__c+LLC_BI__Direct_Exposure__c+LLC_BI__Indirect_Exposure__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Relationship Exposure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>