force-app/main/default/objects/Account/fields/WKDDP__Establishment_State__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__Establishment_State__c</fullName>
    <description>Users populate this optional picklist with the state in which the account holder is established. This field is applicable when the account holder is an entity.</description>
    <inlineHelpText>Select the state in which the account holder is established.</inlineHelpText>
    <label>Establishment State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alaska</fullName>
            </value>
            <value>
                <fullName>Alabama</fullName>
            </value>
            <value>
                <fullName>Arkansas</fullName>
            </value>
            <value>
                <fullName>California</fullName>
            </value>
            <value>
                <fullName>Colorado</fullName>
            </value>
            <value>
                <fullName>Connecticut</fullName>
            </value>
            <value>
                <fullName>District of Columbia</fullName>
            </value>
            <value>
                <fullName>Delaware</fullName>
            </value>
            <value>
                <fullName>Florida</fullName>
            </value>
            <value>
                <fullName>Georgia</fullName>
            </value>
            <value>
                <fullName>Hawaii</fullName>
            </value>
            <value>
                <fullName>Iowa</fullName>
            </value>
            <value>
                <fullName>Idaho</fullName>
            </value>
            <value>
                <fullName>Illinois</fullName>
            </value>
            <value>
                <fullName>Indiana</fullName>
            </value>
            <value>
                <fullName>Kansas</fullName>
            </value>
            <value>
                <fullName>Kentucky</fullName>
            </value>
            <value>
                <fullName>Louisiana</fullName>
            </value>
            <value>
                <fullName>Massachusetts</fullName>
            </value>
            <value>
                <fullName>Maryland</fullName>
            </value>
            <value>
                <fullName>Maine</fullName>
            </value>
            <value>
                <fullName>Michigan</fullName>
            </value>
            <value>
                <fullName>Minnesota</fullName>
            </value>
            <value>
                <fullName>Missouri</fullName>
            </value>
            <value>
                <fullName>Mississippi</fullName>
            </value>
            <value>
                <fullName>Montana</fullName>
            </value>
            <value>
                <fullName>North Carolina</fullName>
            </value>
            <value>
                <fullName>North Dakota</fullName>
            </value>
            <value>
                <fullName>Nebraska</fullName>
            </value>
            <value>
                <fullName>New Hampshire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>