force-app/main/default/objects/Account/fields/WKDDP__Form_W9_EntyType_Disreg_Enty_US_Owner__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__Form_W9_EntyType_Disreg_Enty_US_Owner__c</fullName>
    <description>Users select the disregarded entity&apos;s non-disregarded owner type from this optional picklist.</description>
    <inlineHelpText>Select the disregarded entity&apos;s non-disregarded owner type from this optional picklist.</inlineHelpText>
    <label>Form W9 Enty Typ of Disreg Enty US Owner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Association</fullName>
            </value>
            <value>
                <fullName>Cooperative</fullName>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Domestic Government Unit</fullName>
            </value>
            <value>
                <fullName>Estate</fullName>
            </value>
            <value>
                <fullName>Financial Institution</fullName>
            </value>
            <value>
                <fullName>Foreign Government Unit</fullName>
            </value>
            <value>
                <fullName>General Partnership</fullName>
            </value>
            <value>
                <fullName>Limited Liability Company</fullName>
            </value>
            <value>
                <fullName>Limited Liability Partnership</fullName>
            </value>
            <value>
                <fullName>Limited Partnership</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sole Proprietorship</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>