force-app/main/default/objects/Account/fields/WKDDP__Form_W9_SSN_Disreg_Entity_US_Owner__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__Form_W9_SSN_Disreg_Entity_US_Owner__c</fullName>
    <description>Users populate this optional field with the social security number of the disregarded entity&apos;s primary owner if that party is an individual.</description>
    <inlineHelpText>Enter the social security number of the disregarded entity&apos;s primary owner if that party is an individual.</inlineHelpText>
    <label>Form W9 SSN Disregarded Entity US Owner</label>
    <length>80</length>
    <maskChar>X</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>