force-app/main/default/objects/Account/fields/WKDDP__Form_W9_Tax_Classification_Type__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__Form_W9_Tax_Classification_Type__c</fullName>
    <description>Users select the IRS Form W-9 federal tax classification for the account holder from this optional picklist. This is needed where the account holder is a corporation, limited liability corporation, or disregarded entity. This prints on IRS form W-9 and signature cards.</description>
    <inlineHelpText>Select the IRS Form W-9 federal tax classification for the account holder where the account holder is a corporation, limited liability corporation, or disregarded entity.</inlineHelpText>
    <label>Form W9 Tax Classification Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C Corporation</fullName>
            </value>
            <value>
                <fullName>Disregarded Entity</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>S Corporation</fullName>
            </value>
            <value>
                <fullName>Single-Member</fullName>
            </value>
            <value>
                <fullName>LLC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>