force-app/main/default/objects/Account/fields/WKDDP__Form_W9_Tax_Cls_Disreg_Enty_USOwner__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__Form_W9_Tax_Cls_Disreg_Enty_USOwner__c</fullName>
    <description>Users select the IRS Form W-9 federal tax classification of the disregarded entity&apos;s primary non-disregarded U.S. owner from this optional picklist. This is needed when the owner of the disregarded entity is itself a corporation or limited liability company.</description>
    <inlineHelpText>Select the IRS Form W-9 federal tax classfication of the disregarded entity&apos;s primary non-disregarded U.S. owner when the owner of the disregarded entity is itself a corporation or limited liability company.</inlineHelpText>
    <label>Form W9 Tax Cls Type Disreg Enty USOwner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single-Member</fullName>
            </value>
            <value>
                <fullName>LLC</fullName>
            </value>
            <value>
                <fullName>C Corporation</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>S Corporation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>