force-app/main/default/objects/Account/fields/WKDDP__Telephone_Consumer_Protection_Form__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__Telephone_Consumer_Protection_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users select this optional boolean field to indicate that the financial institution wants to generate a Telephone Consumer Protection Act Consent Account form for the individual account holder. By default it is false.</description>
    <inlineHelpText>Select this checkbox to indicate that the financial institution wants to generate a Telephone Consumer Protection Act Consent Account form for the individual account holder.</inlineHelpText>
    <label>Telephone Consumer Protection Form</label>
    <type>Checkbox</type>
</CustomField>