force-app/main/default/objects/Account/fields/WKDDP__Trust_Revocable__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__Trust_Revocable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators select this optional boolean field to indicate if the trust is revocable. By default, the field is false.</description>
    <inlineHelpText>Select the checkbox to indicate the trust is revocable.</inlineHelpText>
    <label>Trust Revocable</label>
    <type>Checkbox</type>
</CustomField>