force-app/main/default/objects/Account/recordTypes/LLC_BI__Business.recordType-meta.xml
<RecordType>
    <fullName>LLC_BI__Business</fullName>
    <active>true</active>
    <description>Select &quot;Business&quot; if you&apos;re adding a Corporation, Partnership, or other business relationship type (with the exception of Sole Proprietorship).</description>
    <label>Business</label>
</RecordType>