force-app/main/default/objects/Account/recordTypes/LLC_BI__Household.recordType-meta.xml
<RecordType>
    <fullName>LLC_BI__Household</fullName>
    <active>true</active>
    <description>Select &quot;Household&quot; if you&apos;re adding a Household relationship type.</description>
    <label>Household</label>
</RecordType>